# cookiecutter-simple-poetry

./: README.md  cookiecutter.json  memo.md
sample/python_boilerplate/: .gitignore  README.md  pyproject.toml  pytest.ini
sample/python_boilerplate/.github/workflows/: deploy_doc.yml
sample/python_boilerplate/src/python_boilerplate/: cli.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: deploy_doc.yml  test.yml
